--- a/theme/templates/calendar.html
+++ b/theme/templates/calendar.html
@@ -52,6 +52,9 @@ document.addEventListener('DOMContentLoaded', function () {
   const calendar = new FullCalendar.Calendar(calendarEl, {
     initialView: 'timeGridWeek',
     selectable: true,
+    slotMinTime: '06:00:00',
+    slotMaxTime: '22:00:00',
+    timeZone: 'UTC',
     height: 'auto',
     allDaySlot: false,
     headerToolbar: {
